Bug 41425 - Kinkatta crashes when signing on from other location
Summary: Kinkatta crashes when signing on from other location
Status: RESOLVED FIXED
Alias: None
Product: kinkatta
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.1-beta
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: Kinkatta Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2002-04-21 21:03 UTC by Wd
Modified: 2019-11-30 10:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wd 2002-04-21 21:00:58 UTC
(*** This bug was imported into bugs.kde.org ***)

Package:           kinkatta
Version:           1.1-beta (using KDE 2.2.2 )
Severity:          normal
Installed from:    Debian Package 4:2.2.2-13 (3.0)
Compiler:          gcc version 2.95.4 20011002 (Debian prerelease)
OS:                Linux (i586) release 2.4.18-k6
OS/Compiler notes: 

If I leave kinkatta logged on and then sign on from another PC (using Win32 "native" AIM client when I come back to my linux box I see that Kinkatta has crashed.

Happens every time.

(Submitted via bugs.kde.org)
(Called from KBugReport dialog)
Comment 1 Jim Wilson 2002-04-21 21:25:09 UTC
Backtrace output would be good.

Ben I think I know what this is.  The problem was fixed once before but
someone took it out for whatever reason (probably another network related
problem and thought incorrectly it was causing it).  It has to do with the
socket disappearing (on a disconnect) while the KitSocket::_worker()
(asynchronous timer triggered routine) is trying to read or write to it.

Best

Jim

wd@dormcam.mine.nu said:

> Package: kinkatta
> Version: 1.1-beta (using KDE 2.2.2 )
> Severity: normal
> Installed from:    Debian Package 4:2.2.2-13 (3.0)
> Compiler:          gcc version 2.95.4 20011002 (Debian prerelease)
> OS:                Linux (i586) release 2.4.18-k6
> OS/Compiler notes: 
> 
> If I leave kinkatta logged on and then sign on from another PC (using Win32
"native" AIM client when I come back to my linux box I see that Kinkatta has
crashed.
> 
> Happens every time.
>
Comment 2 Jim Wilson 2002-04-21 21:55:33 UTC
wd@dormcam.mine.nu said:

> Package: kinkatta
> Version: 1.1-beta (using KDE 2.2.2 )
> Severity: normal
> Installed from:    Debian Package 4:2.2.2-13 (3.0)
> Compiler:          gcc version 2.95.4 20011002 (Debian prerelease)
> OS:                Linux (i586) release 2.4.18-k6
> OS/Compiler notes: 
> 
> If I leave kinkatta logged on and then sign on from another PC (using Win32
"native" AIM client when I come back to my linux box I see that Kinkatta has
crashed.
> 

After looking it seems that this was fixed in CVS back in January.  I'm not
sure which version you are running (last release was 1.01) and it only
included a minor patch for login to 1.00.  Then again it doesn't make sense
that you are reporting on bugs.kde.org either (kinkatta asfik hasn't been
moved to kde cvs).  Try cvs from kinkatta.sourceforge.net and see if that
fixes the problem.  If it doesn't let us know.

Best

Jim
Comment 3 Wd 2002-04-22 02:56:36 UTC
> After looking it seems that this was fixed in CVS back in January.  I'm not
> sure which version you are running (last release was 1.01) and it only
> included a minor patch for login to 1.00.  Then again it doesn't make sense
> that you are reporting on bugs.kde.org either (kinkatta asfik hasn't been
> moved to kde cvs).  Try cvs from kinkatta.sourceforge.net and see if that
> fixes the problem.  If it doesn't let us know.

I'll take a look at the CVS version.   Actually it doesn't happen 100% of
the time as I had originally reported.   (I just tried reproducing and it
didn't crash for some reason)

It may possibly have to do with the time elapsed.  Here's the scenario
where it would crash.   I'd be signed in on Kinkatta.  I leave for work in
the morning and sign in at work.  (Bumping kinkatta off).   10 or so hours
later when I'm back at home I click OK on the dialog saying I've been
disconnected.   That's when I get the crash.   (There is no backtrace
info)

As for reporting this to the wrong area I dunno.  Sorry if I did.  There
was a "Report a bug" menu option in the Kinkatta software.  I figured it
would point me in the right direction.   :)

-WD
Comment 4 Jim Wilson 2002-04-22 03:33:02 UTC
WD <wd@dormcam.mine.nu> said:

> It may possibly have to do with the time elapsed.  Here's the scenario
> where it would crash.   I'd be signed in on Kinkatta.  I leave for work in
> the morning and sign in at work.  (Bumping kinkatta off).   10 or so hours
> later when I'm back at home I click OK on the dialog saying I've been
> disconnected.   That's when I get the crash.   (There is no backtrace
> info)
> 
> As for reporting this to the wrong area I dunno.  Sorry if I did.  There
> was a "Report a bug" menu option in the Kinkatta software.  I figured it
> would point me in the right direction.   :)
> 

This sounds more and more like the bug that I'm thinking of.  Please let me
know if the cvs fixes it for you.  Now that "Report a  Bug" option...hmmm. 
Will have to ask Ben about that.  Apparently it works which isn't a bad deal ;-).

Best

Jim
Comment 5 Wd 2002-04-24 04:18:51 UTC
> This sounds more and more like the bug that I'm thinking of.  Please let me
> know if the cvs fixes it for you.  Now that "Report a  Bug" option...hmmm.
> Will have to ask Ben about that.  Apparently it works which isn't a bad deal ;-).

Actually the CVS version exhibits the same problem.
I left kinkatta signed on.
I signed on with AIM at work.
About 12 hours later I dismiss the dialog box saying that I've been
disconnected.
Hard disk grinds a bit and a dialog comes up saying that Kinkatta has
crashed with a Signal 11

ideas?

-WD
Comment 6 Jim Wilson 2002-04-24 11:22:33 UTC
WD <wd@dormcam.mine.nu> said:

> > This sounds more and more like the bug that I'm thinking of.  Please
let me
> > know if the cvs fixes it for you.  Now that "Report a  Bug"
option...hmmm.
> > Will have to ask Ben about that.  Apparently it works which isn't a
bad deal ;-).
> 
> Actually the CVS version exhibits the same problem.
> I left kinkatta signed on.
> I signed on with AIM at work.
> About 12 hours later I dismiss the dialog box saying that I've been
> disconnected.
> Hard disk grinds a bit and a dialog comes up saying that Kinkatta has
> crashed with a Signal 11
> 
> ideas?
> 

Yes! The other day I just went by the comment in the cvs log that the
segfaults were fixed  but looking at the code I saw that they were still
there.  So I fixed them again.  And to be sure I've been testing pretty
thoroughly (even though the problems are obvious looking at the code).  Looks
like I will be able to commit the path later this morning.  I'll let you know
when it is in.

Best

Jim
Comment 7 icefox 2003-11-08 22:38:46 UTC
Project is closed
Comment 8 Kuntal Majumder 2019-11-30 10:41:23 UTC
Git commit fcb5c280af2d485d713202d0dc477e0838671b5f by Kuntal Majumder.
Committed on 30/11/2019 at 10:41.
Pushed by kuntalmajumder into branch 'master'.

Fix segfault while opening text with double click

M  +3    -0    plugins/tools/svgtexttool/kis_font_family_combo_box.cpp

https://invent.kde.org/kde/krita/commit/fcb5c280af2d485d713202d0dc477e0838671b5f
Comment 9 Kuntal Majumder 2019-11-30 10:42:07 UTC
ahh shit wrong bug number