Fix segfault while opening text with double click

BUG: 41425